# OpenPill

./: .gitmodules  CMakeLists.txt  Readme.md
Core/: CMakeLists.txt
Core/Rn4871/: rn4871.c  rn4871.h
Core/Src/: main.c
